# spring-rs-demo

./: .gitignore  Cargo.toml
config/: app.toml
src/: main.rs
src/config/: cust_axum_response.rs  mod.rs  mysql.rs  nacos.rs  redis.rs
src/controller/: users_controller.rs
src/entity_patch/: login_credentials.rs  mod.rs
src/mapper/: mod.rs  users_mapper.rs
src/patch/: login_credentials.rs
src/pojo/: mod.rs  token.rs  users.rs
src/res/: result.rs
src/service/: mod.rs  users_service.rs
src/service/impl/: mod.rs  users_services_impl.rs
