[package]
name = "spring-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# spring提供了核心的插件系统和有用的过程宏
spring = "0.1.1"
# 如果你准备写web应用就添加spring-web
spring-web = "0.1.2"
# 如果应用需要和数据库交互就添加spring-sqlx
spring-sqlx = { version = "0.1.1", features = ["mysql", "runtime-tokio-rustls"] }
# spring-rs项目默认使用tokio异步运行时
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
nacos-sdk = { version = "0.4.2", features = ["default"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
