[package]
name = "spring-rs-rbatis-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# spring提供了核心的插件系统和有用的过程宏
spring = "0.1.1"
# 如果你准备写web应用就添加spring-web
spring-web = "0.1.2"
# spring-rs项目默认使用tokio异步运行时
anyhow = "1.0.89"
nacos-sdk = { version = "0.4.2", features = ["default"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["full"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

rbs = { version = "4.5.20" }
rbatis = { version = "4.5.32", features = [] }
rbdc-mysql = "4.5.11"
once_cell = "1.20.1"
redis = { version = "0.27.4", features = ["tokio-comp", "json", "cluster"] }

[profile.dev]
overflow-checks = false
strip = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false
